Clean up Code